--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,17 @@
     </div>
   </section>
 
+  <section id="featuredProjects" class="featured-projects" hidden>
+    <div class="featured-inner reveal-section">
+      <div class="featured-header">
+        <p class="section-eyebrow">Featured</p>
+        <h2>Featured Projects</h2>
+        <p>Handpicked highlights from recent collaborations.</p>
+      </div>
+      <div class="featured-grid" id="featuredGrid"></div>
+    </div>
+  </section>
+
   <main>
     <!-- ABOUT -->
     <section id="about" class="dark-panel reveal-section">
