Add services SEO pages and harden API JSON parsing

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Movil | Crafting Visual Experiences</title>
-  <meta name="description" content="Movil designs and fabricates custom signage, LED displays, and experiential installations for brands across the Maldives." />
+  <title>Signage & Branding in Maldives | LED Screens, Shop Signs | Movil</title>
+  <meta name="description" content="Movil delivers custom signage, branding, sticker printing, LED screens, video walls, shop signs, and LED channel letters across Maldives for cafes, restaurants, shops, and offices." />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="/" />
+  <link rel="canonical" href="https://www.movillive.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Movil" />
-  <meta property="og:title" content="Movil | Crafting Visual Experiences" />
-  <meta property="og:description" content="Movil designs and fabricates custom signage, LED displays, and experiential installations for brands across the Maldives." />
-  <meta property="og:url" content="/" />
+  <meta property="og:title" content="Signage & Branding in Maldives | LED Screens, Shop Signs | Movil" />
+  <meta property="og:description" content="Custom signage, branding, sticker printing, LED screens, video walls, shop signs, and LED channel letters across Maldives." />
+  <meta property="og:url" content="https://www.movillive.com/" />
   <meta property="og:image" content="https://www.movillive.com/favicon/android-chrome-512x512.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="512" />
@@ -19,8 +19,8 @@
   <meta property="og:image:alt" content="Movil logo" />
   <meta property="og:locale" content="en_US" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Movil | Crafting Visual Experiences" />
-  <meta name="twitter:description" content="Movil designs and fabricates custom signage, LED displays, and experiential installations for brands across the Maldives." />
+  <meta name="twitter:title" content="Signage & Branding in Maldives | LED Screens, Shop Signs | Movil" />
+  <meta name="twitter:description" content="Custom signage, branding, sticker printing, LED screens, video walls, shop signs, and LED channel letters across Maldives." />
   <meta name="twitter:image" content="https://www.movillive.com/favicon/android-chrome-512x512.png" />
   <meta name="twitter:image:alt" content="Movil logo" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
@@ -35,7 +35,7 @@
     "name": "Movil",
     "url": "https://movillive.com/",
     "image": "https://www.movillive.com/favicon/android-chrome-512x512.png",
-    "description": "Movil designs and fabricates custom signage, LED displays, and experiential installations for brands across the Maldives.",
+    "description": "Custom signage, branding, sticker printing, LED screens, video walls, shop signs, and LED channel letters across Maldives.",
     "telephone": "+9607899922",
     "email": "sales@movillive.com",
     "address": {
@@ -43,12 +43,34 @@
       "addressLocality": "Male",
       "addressCountry": "MV"
     },
-    "areaServed": "Maldives",
-      "sameAs": [
+    "areaServed": {
+      "@type": "Country",
+      "name": "Maldives"
+    },
+    "keywords": [
+      "signage",
+      "branding",
+      "sticker printing",
+      "LED screen",
+      "LED video wall",
+      "shop sign",
+      "LED channel letters"
+    ],
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Signage & Branding Services",
+      "itemListElement": [
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Signage making for cafes, restaurants, shops, and offices" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Sticker printing and installation" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "LED screens and video walls" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Shop signs and LED channel letters" } }
+      ]
+    },
+    "sameAs": [
       "https://www.instagram.com/movilshowroom",
       "https://www.facebook.com/movilshowroom",
       "https://www.tiktok.com/@movilshowroom"
-      ]
+    ]
   }
   </script>
  
@@ -84,6 +106,7 @@
           <ul id="primary-nav" class="nav__links" data-open="false">
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -149,6 +172,49 @@
           We merge craftsmanship, technology, and bold design to create visual experiences that tell your story -
           from LED signs and CNC art to immersive digital installations.
         </p>
+      </div>
+    </section>
+
+    <!-- SERVICES -->
+    <section id="services" class="services-section reveal-section">
+      <div class="section-inner">
+        <h2>Signage & Branding Services</h2>
+        <p>
+          We serve the whole of Maldives with end-to-end signage, branding, and installation —
+          from cafes and restaurants to shops, offices, resorts, and public spaces.
+        </p>
+        <div class="services-grid">
+          <article class="service-card">
+            <h3>Signage Making</h3>
+            <p>Custom signage for cafes, restaurants, shops, offices, resorts, and public venues.</p>
+            <a href="/services/signage-maldives.html">View service</a>
+          </article>
+          <article class="service-card">
+            <h3>Sticker Printing & Installation</h3>
+            <p>High-quality sticker printing, branding decals, and professional installation.</p>
+            <a href="/services/sticker-printing-maldives.html">View service</a>
+          </article>
+          <article class="service-card">
+            <h3>LED Screens & Video Walls</h3>
+            <p>Indoor and outdoor LED screens, video walls, and digital display solutions.</p>
+            <a href="/services/led-screen-video-wall-maldives.html">View service</a>
+          </article>
+          <article class="service-card">
+            <h3>Shop Signs</h3>
+            <p>Premium storefront and shop sign systems with lighting and custom finishes.</p>
+            <a href="/services/shop-signs-maldives.html">View service</a>
+          </article>
+          <article class="service-card">
+            <h3>LED Channel Letters</h3>
+            <p>Illuminated channel letters for high-impact brand visibility day and night.</p>
+            <a href="/services/led-channel-letters-maldives.html">View service</a>
+          </article>
+          <article class="service-card">
+            <h3>Branding & Wayfinding</h3>
+            <p>Brand rollout, interior branding, and wayfinding systems for large spaces.</p>
+            <a href="/services/branding-maldives.html">View service</a>
+          </article>
+        </div>
       </div>
     </section>
 
