Move services section to dedicated page

--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
           <ul id="primary-nav" class="nav__links" data-open="false">
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="/services/">Services</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -172,49 +172,6 @@
           We merge craftsmanship, technology, and bold design to create visual experiences that tell your story -
           from LED signs and CNC art to immersive digital installations.
         </p>
-      </div>
-    </section>
-
-    <!-- SERVICES -->
-    <section id="services" class="services-section reveal-section">
-      <div class="section-inner">
-        <h2>Signage & Branding Services</h2>
-        <p>
-          We serve the whole of Maldives with end-to-end signage, branding, and installation —
-          from cafes and restaurants to shops, offices, resorts, and public spaces.
-        </p>
-        <div class="services-grid">
-          <article class="service-card">
-            <h3>Signage Making</h3>
-            <p>Custom signage for cafes, restaurants, shops, offices, resorts, and public venues.</p>
-            <a href="/services/signage-maldives.html">View service</a>
-          </article>
-          <article class="service-card">
-            <h3>Sticker Printing & Installation</h3>
-            <p>High-quality sticker printing, branding decals, and professional installation.</p>
-            <a href="/services/sticker-printing-maldives.html">View service</a>
-          </article>
-          <article class="service-card">
-            <h3>LED Screens & Video Walls</h3>
-            <p>Indoor and outdoor LED screens, video walls, and digital display solutions.</p>
-            <a href="/services/led-screen-video-wall-maldives.html">View service</a>
-          </article>
-          <article class="service-card">
-            <h3>Shop Signs</h3>
-            <p>Premium storefront and shop sign systems with lighting and custom finishes.</p>
-            <a href="/services/shop-signs-maldives.html">View service</a>
-          </article>
-          <article class="service-card">
-            <h3>LED Channel Letters</h3>
-            <p>Illuminated channel letters for high-impact brand visibility day and night.</p>
-            <a href="/services/led-channel-letters-maldives.html">View service</a>
-          </article>
-          <article class="service-card">
-            <h3>Branding & Wayfinding</h3>
-            <p>Brand rollout, interior branding, and wayfinding systems for large spaces.</p>
-            <a href="/services/branding-maldives.html">View service</a>
-          </article>
-        </div>
       </div>
     </section>
 
