--- a/public/services/shop-signs-maldives.html
+++ b/public/services/shop-signs-maldives.html
@@ -50,7 +50,7 @@
         <ul id="primary-nav" class="nav__links" data-open="false">
           <li><a href="/#hero">Home</a></li>
           <li><a href="/#about">About</a></li>
-          <li><a href="/#services">Services</a></li>
+          <li><a href="/services/">Services</a></li>
           <li><a href="/#projects">Projects</a></li>
           <li><a href="/#contact">Contact</a></li>
         </ul>
