--- a/public/services/index.html
+++ b/public/services/index.html
@@ -11,6 +11,11 @@
   <meta property="og:description" content="Signage, sticker printing, LED screens, shop signs, and branding services across Maldives." />
   <meta property="og:url" content="https://www.movillive.com/services/" />
   <meta property="og:image" content="https://www.movillive.com/favicon/android-chrome-512x512.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+  <link rel="shortcut icon" href="/favicon/favicon.ico" />
+  <link rel="manifest" href="/favicon/site.webmanifest" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Space+Grotesk:wght@500;600&display=swap" rel="stylesheet" />
