--- a/public/services/signage-maldives.html
+++ b/public/services/signage-maldives.html
@@ -14,6 +14,11 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Signage Making in Maldives | Movil" />
   <meta name="twitter:description" content="Custom signage for cafes, restaurants, shops, offices, and resorts across Maldives." />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+  <link rel="shortcut icon" href="/favicon/favicon.ico" />
+  <link rel="manifest" href="/favicon/site.webmanifest" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Space+Grotesk:wght@500;600&display=swap" rel="stylesheet" />
