Center services header copy

--- a/public/services/index.html
+++ b/public/services/index.html
@@ -94,8 +94,11 @@
           <p class="section-eyebrow">What we do</p>
           <h2>Core Services</h2>
         </div>
-        <p>
-          Choose a service to explore more details, recommended materials, and delivery timelines.
+        <p class="services-list__copy">
+          <span>Choose a service to explore</span>
+          <span>more details, recommended</span>
+          <span>materials, and delivery</span>
+          <span>timelines.</span>
         </p>
       </div>
       <div class="services-grid services-grid--rich">
