Center services CTA text

--- a/public/services/index.html
+++ b/public/services/index.html
@@ -168,7 +168,7 @@
 
   <section class="services-cta dark-panel reveal-section">
     <div class="section-inner services-cta__inner">
-      <div>
+      <div class="services-cta__content">
         <p class="section-eyebrow">Get started</p>
         <h2>Plan your next signage project</h2>
         <p>Share your location, size, and timeline — we’ll handle the rest.</p>
