Fix admin select visibility and hero preview

--- a/public/admin.html
+++ b/public/admin.html
@@ -340,6 +340,11 @@
       appearance: none;
     }
 
+    .admin-form select option {
+      background: #0f1322;
+      color: #f5f7ff;
+    }
+
     .admin-form textarea {
       min-height: 120px;
       resize: vertical;
@@ -683,7 +688,11 @@
       letter-spacing: 0.12em;
       text-transform: uppercase;
       color: var(--muted);
-      background: rgba(0, 0, 0, 0.4);
+      background: rgba(6, 8, 16, 0.9);
+    }
+
+    .hero-video-preview.is-empty .hero-video-frame video {
+      opacity: 0;
     }
 
     .hero-video-meta {
