Simplify services header and boost hero video

--- a/public/services/index.html
+++ b/public/services/index.html
@@ -94,12 +94,7 @@
           <p class="section-eyebrow">What we do</p>
           <h2>Core Services</h2>
         </div>
-        <p class="services-list__copy">
-          <span>Choose a service to explore</span>
-          <span>more details, recommended</span>
-          <span>materials, and delivery</span>
-          <span>timelines.</span>
-        </p>
+        <p class="services-list__copy">Choose a service to explore details, materials, and timelines.</p>
       </div>
       <div class="services-grid services-grid--rich">
         <article class="service-card service-card--rich">
