Expand hero controls and fix overlay visibility

--- a/public/admin.html
+++ b/public/admin.html
@@ -341,8 +341,8 @@
     }
 
     .admin-form select option {
-      background: #0f1322;
-      color: #f5f7ff;
+      background: #f4f6ff;
+      color: #0c111f;
     }
 
     .admin-form textarea {
@@ -1127,6 +1127,78 @@
                   max="1"
                   step="0.01"
                   value="0.6"
+                />
+              </div>
+              <div class="hero-display-field hero-video-opacity">
+                <label for="heroVideoOpacity">Video opacity <span id="heroVideoOpacityValue">100%</span></label>
+                <input
+                  type="range"
+                  id="heroVideoOpacity"
+                  name="videoOpacity"
+                  min="0.4"
+                  max="1"
+                  step="0.01"
+                  value="1"
+                />
+              </div>
+              <div class="hero-display-field hero-video-brightness">
+                <label for="heroVideoBrightness">Video brightness <span id="heroVideoBrightnessValue">100%</span></label>
+                <input
+                  type="range"
+                  id="heroVideoBrightness"
+                  name="videoBrightness"
+                  min="0.7"
+                  max="1.3"
+                  step="0.01"
+                  value="1"
+                />
+              </div>
+              <div class="hero-display-field hero-video-saturation">
+                <label for="heroVideoSaturation">Video saturation <span id="heroVideoSaturationValue">110%</span></label>
+                <input
+                  type="range"
+                  id="heroVideoSaturation"
+                  name="videoSaturation"
+                  min="0.8"
+                  max="1.6"
+                  step="0.01"
+                  value="1.1"
+                />
+              </div>
+              <div class="hero-display-field hero-video-contrast">
+                <label for="heroVideoContrast">Video contrast <span id="heroVideoContrastValue">105%</span></label>
+                <input
+                  type="range"
+                  id="heroVideoContrast"
+                  name="videoContrast"
+                  min="0.9"
+                  max="1.3"
+                  step="0.01"
+                  value="1.05"
+                />
+              </div>
+              <div class="hero-display-field hero-video-blur">
+                <label for="heroVideoBlur">Video softness <span id="heroVideoBlurValue">0px</span></label>
+                <input
+                  type="range"
+                  id="heroVideoBlur"
+                  name="videoBlur"
+                  min="0"
+                  max="8"
+                  step="0.5"
+                  value="0"
+                />
+              </div>
+              <div class="hero-display-field hero-vignette-opacity">
+                <label for="heroVignetteOpacity">Vignette intensity <span id="heroVignetteOpacityValue">100%</span></label>
+                <input
+                  type="range"
+                  id="heroVignetteOpacity"
+                  name="vignetteOpacity"
+                  min="0"
+                  max="1"
+                  step="0.01"
+                  value="1"
                 />
               </div>
               <div class="hero-display-actions">
