Improve hero overlay dropdown visibility

--- a/public/admin.html
+++ b/public/admin.html
@@ -338,9 +338,27 @@
 
     .admin-form select {
       appearance: none;
+      color-scheme: dark;
     }
 
     .admin-form select option {
+      background: #0f1322;
+      color: #f5f7ff;
+    }
+
+    .hero-overlay-picker select {
+      background: #f4f6ff;
+      color: #0c111f;
+      border-color: rgba(12, 17, 31, 0.25);
+      color-scheme: light;
+    }
+
+    .hero-overlay-picker select:focus {
+      background: #ffffff;
+      color: #0c111f;
+    }
+
+    .hero-overlay-picker select option {
       background: #f4f6ff;
       color: #0c111f;
     }
