--- a/public/admin.html
+++ b/public/admin.html
@@ -6,7 +6,7 @@
   <title>Movil Admin</title>
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png"/>
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css?v=20260205"/>
   <script src="/analytics.js" defer></script>
     <style>
     :root {
@@ -816,8 +816,8 @@
       position: fixed;
       inset: 0;
       z-index: 1000;
-      background: rgba(2, 4, 10, 0.95);
-      padding: clamp(12px, 2.5vw, 28px);
+      background: var(--bg);
+      padding: 0;
       align-items: stretch;
     }
 
@@ -827,16 +827,18 @@
 
     .edit-page-shell {
       width: 100%;
+      height: 100%;
+      max-height: 100%;
       flex: 1;
       min-height: 0;
       display: flex;
       flex-direction: column;
       gap: 18px;
       padding: clamp(18px, 2.5vw, 28px);
-      border-radius: var(--radius-lg);
+      border-radius: 0;
       border: 1px solid var(--border);
       background: var(--panel);
-      box-shadow: 0 45px 90px rgba(0, 0, 0, 0.55);
+      box-shadow: none;
     }
 
     .edit-page-header {
@@ -1028,12 +1030,7 @@
       .admin-filter-group {
         min-width: 100%;
       }
-      .edit-page {
-        padding: 0;
-      }
-
       .edit-page-shell {
-        border-radius: 0;
         height: 100dvh;
         max-height: 100dvh;
       }
@@ -1394,7 +1391,7 @@
   </section>
 
   <div id="adminToastStack" class="toast-stack"></div>
-  <script src="script.js" defer></script>
+  <script src="script.js?v=20260205" defer></script>
 </body>
 </html>
 
